--- a/index.html
+++ b/index.html
@@ -34,16 +34,8 @@
 
     <h2>Spending - Last 7 days</h2> 
     <div class="statictics">
-     
-     <div class="barcon"> <p class="bar" id="mon"> </p> <span class="amount" id="amomon">$17.45</span> <span> mon</span></div>
-     <div class="barcon"> <p class="bar" id="tue"></p> <span class="amount" id="amotue">$34.91</span> <span> tue</span></div>
-     <div class="barcon"> <p class="bar" id="wed"></p> <span class="amount" id="amowed">$52.36</span> <span> wed</span></div>
-     <div class="barcon"> <p class="bar" id="thu"></p> <span class="amount" id="amothu">$31.07</span> <span> thu</span></div>
-     <div class="barcon"> <p class="bar" id="fri"></p> <span class="amount" id="amofri">$23.39</span> <span> fri</span></div>
-     <div class="barcon"> <p class="bar" id="sat"></p> <span class="amount" id="amosat">$43.28</span> <span> sat</span></div>
-     <div class="barcon"> <p class="bar" id="sun"></p> <span class="amount" id="amosun">$25.48</span> <span> sun</span></div> 
-
-
+        <canvas id="myChart"></canvas> 
+    
     </div>
     <hr>
    
@@ -71,7 +63,71 @@
     Coded by <a href="#">R.A</a>.
   </div>
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+  const labels = [
+    'mon',
+    'tue',
+    'web',
+    'thu',
+    'fri',
+    'sat',
+    'sun'
+  ];
 
+  const data = {
+    labels: labels,
+    datasets: [{
+      label: "",
+      data: [17.45, 34.91, 52.36, 31.07, 23.39, 43.28, 25.48],
+        backgroundColor: [
+        "hsl(10, 79%, 65%)",
+        "hsl(10, 79%, 65%)",
+        "hsl(186, 34%, 60%)",
+        "hsl(10, 79%, 65%)",
+        "hsl(10, 79%, 65%)",
+        "hsl(10, 79%, 65%)",
+        "hsl(10, 79%, 65%)"
+
+        ],
+        hoverBackgroundColor: [
+          "hsla(10, 79%, 65%, 0.8)",
+          "hsla(10, 79%, 65%, 0.8)",
+          "hsla(186, 34%, 60%, 0.8)",
+          "hsla(10, 79%, 65%, 0.8)",
+          "hsl(10, 79%, 65%, 0.8)",
+          "hsl(10, 79%, 65%, 0.8)",
+          "hsl(10, 79%, 65%, 0.8)",
+        ]
+
+
+    }]
+  };
+
+  const config = {
+    type: 'bar',
+    data: data,
+    options: {
+      legend: {
+        display: false
+    },
+    tooltips: {
+        callbacks: {
+           label: function(tooltipItem) {
+                  return tooltipItem.yLabel;
+           }
+        }
+    }
+    }
+  };
+</script>
+
+<script>
+  const myChart = new Chart(
+    document.getElementById('myChart'),
+    config
+  );
+</script>
 
 </body>
 </html>
